// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main should support js output format for additionalProperties errors 1`] = `
[
  {
    "end": {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
    "error": " Property baz is not expected to be here",
    "path": "",
    "start": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
  },
]
`;

exports[`Main should support js output format for default errors 1`] = `
[
  {
    "end": {
      "column": 25,
      "line": 1,
      "offset": 24,
    },
    "error": "/id: type must be number",
    "path": "/id",
    "start": {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
  },
]
`;

exports[`Main should support js output format for enum errors 1`] = `
[
  {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "error": "/id must be equal to one of the allowed values: foo, bar",
    "path": "/id",
    "start": {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
    "suggestion": "Did you mean bar?",
  },
]
`;

exports[`Main should support js output format for required errors 1`] = `
[
  {
    "error": "/nested must have required property 'id'",
    "path": "/nested",
    "start": {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
  },
]
`;
